<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Virtual Pet</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_manage_account">Manage Account</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="RepeatPassword">Repeat Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnDeleteAccount">Delete Account</string>
    <string name="btnUpdateAccount">Update Account</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_login">Login</string>
    <string name="btnCreateAccountAsk">Create Account?</string>
    <string name="btnLoginAsk">Login?</string>
    <string name="title_pet">Pet</string>
    <string name="title_inventory">Inventory</string>
    <string name="btnManageAccount">Manage Account</string>
    <string name="btnPet">Pet</string>
    <string name="btnInventory">Inventory</string>
    <string name="title_activity_nickname">Nickname</string>
    <string name ="btnUpdate">Update Nickname</string>
    <string name = "currentEmail">Current Email</string>
    <string name = "currentPassword">Current Password</string>
    <string name = "newEmail">New Email</string>
    <string name = "newPassword">New Password</string>

</resources>
