<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

                    <TextView
                        android:id="@+id/lblUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="69dp"
                        android:layout_marginTop="84dp"
                        android:text="@string/Username"
                        android:textSize="20dp"
                        tools:ignore="HardcodedText" />

  

                    <EditText
                        android:id="@+id/txtUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/lblUsername"
                        android:layout_centerHorizontal="true"
                        android:ems="10"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/lblPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/lblUsername"
                        android:layout_below="@+id/lblUsername"
                        android:layout_marginTop="27dp"
                        android:text="@string/Password"
                        android:textSize="20dp"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/lblPassword"
                        android:layout_alignLeft="@+id/txtUsername"
                        android:ems="10"
                        android:inputType="textPassword" >

                        <requestFocus />
                    </EditText>

                    <Button
                        android:id="@+id/btnCreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/txtPassword"
                        android:layout_below="@+id/txtPassword"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="29dp"
                        android:text="@string/btnLogin" />

</RelativeLayout>
