



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    


    
    <TextView
        android:id="@+id/txtPetNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtDescription"
        android:layout_below="@+id/txtPetName"
        android:layout_marginTop="20dp"
        android:text="[Pet Nickname]"
        android:onClick="onClick"
		android:clickable="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgPet"
        android:layout_below="@+id/imgPet"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="66dp"
        android:text="[Pet Description]"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtPetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txtPetNickname"
        android:layout_marginRight="15dp"
        android:layout_marginTop="178dp"
        android:text="[Pet Name]"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imgPet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtPetNickname"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/test_owl" 
        android:contentDescription="image not found"/>

            <Button
                android:id="@+id/btnManageAccount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnInventory"
                android:layout_alignParentTop="true"
                android:drawableLeft="@drawable/ic_action_person" 
                android:text="@string/btnManageAccount" />

            <Button
                android:id="@+id/btnPet"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnManageAccount"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/ic_action_favorite"
                android:text="@string/btnPet"  />

            <Button
                android:id="@+id/btnInventory"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:drawableLeft="@drawable/ic_action_view_as_grid" 
                android:text="@string/btnInventory" />

</RelativeLayout>
